[package]

name          = "poule"
version       = "0.2.0"
license       = "MIT"
authors       = ["Carl Lerche <me@carllerche.com>", "Geoffroy Couprie <contact@geoffroycouprie.com>"]
description   = "A pool of reusable values"
documentation = "https://docs.rs/poule"
homepage      = "https://github.com/sozu-proxy/poule"
repository    = "https://github.com/sozu-proxy/poule"
readme        = "README.md"
keywords      = ["pool"]
edition       = "2018"
exclude       = [
  ".gitignore",
  ".travis.yml",
  "deploy.sh",
  "test/**/*",
]

[dependencies]
libc = "0.2"

[[test]]

name = "test"
path = "test/test.rs"
